# sre-harness

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: triage_demo.py
src/sre_harness/: __init__.py  guardrails.py  harness.py  memory.py  model.py  observability.py  tools.py  verification.py
tests/: test_guardrails.py  test_harness.py  test_verification.py
