[project]
name = "sre-harness"
version = "0.1.0"
description = "A minimal, runnable reference harness for SRE agents — tool orchestration, verification, memory, guardrails, and observability in one loop."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "Ajin Baby" }]
keywords = ["ai", "agents", "harness", "sre", "mcp", "guardrails", "observability"]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.50.0"]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.urls]
Homepage = "https://cloudandsre.com"
Repository = "https://github.com/ajinb/sre-harness"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sre_harness"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
